fix homepage styling on mobile

--- a/tests/dummy/app/styles/website/homepage.scss
+++ b/tests/dummy/app/styles/website/homepage.scss
@@ -7,10 +7,9 @@
 
 .banner {
   height: calc(100vh - 50px);
-  width: 100%;
+  width: 100vw;
   position: relative;
   overflow: hidden;
-  min-width: 950px;
   color: #ffffff;
   line-height: 32px;
   text-align: center;
@@ -40,6 +39,7 @@
     color: #ffffff;
     opacity: 0.7;
     margin-bottom: 60px;
+    max-width: 500px;
   }
 
   .download {
